--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=2FALogin
 
-spring.datasource.url=jdbc:mysql://localhost:3307/tta?useSSL=false&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://localhost:3307/tta?useSSL=false&erverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
@@ -28,3 +28,6 @@ jwt.expirationMs=3600000
 # 2FA code expiration (ms)
 # 5 minutes
 twofactor.code.ttl=300000  
+
+spring.flyway.enabled=true
+spring.flyway.locations=classpath:db/migration
