fix(email): fix sending email with sendgrid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,14 +7,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # mail (SendGrid SMTP example or Gmail)
-spring.mail.host=smtp.sendgrid.net
-spring.mail.port=587
-# for SendGrid use 'apikey'
-spring.mail.username=apikey
-spring.mail.password=YOUR_SENDGRID_APIKEY
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
-spring.mail.from=you@example.com
+sendgrid.api-key=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
 
 # Twilio example (SMS)
 twilio.accountSid=YOUR_TWILIO_SID
