--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-
+      security-events: write
     steps:
     - uses: actions/checkout@v4
     - name: Set up JDK 17
