--- a/build.gradle
+++ b/build.gradle
@@ -55,3 +55,7 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
     options.release = 17
 }
+
+bootJar {
+    archiveFileName = 'app.jar'
+}
