--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,4 +1,4 @@
-name: CI/CD Spring Boot Docker
+name: CI/CD Spring Boot Docker (Gradle)
 
 on:
   push:
@@ -11,24 +11,28 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      # Setup Maven
+      # Setup Java
       - name: Setup Java
         uses: actions/setup-java@v3
         with:
           distribution: temurin
           java-version: '17'
 
+      # Build Spring Boot jar with Gradle
       - name: Build Spring Boot jar
-        run: mvn clean package -DskipTests
+        run: ./gradlew clean bootJar -x test
 
+      # Build Docker image
       - name: Build Docker image
         run: docker build -t haryokuncoro/spring-boot-2fa-login:latest .
 
+      # Login DockerHub
       - name: Login DockerHub
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # Push Docker image
       - name: Push Docker image
         run: docker push haryokuncoro/spring-boot-2fa-login:latest
