--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ twofactor.code.ttl=300000
 
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
+
+SENDGRID_FROM_EMAIL=emadekuncoro@gmail.com
