--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation("com.bucket4j:bucket4j-core:8.7.0") // rate limiter
     implementation("com.google.guava:guava:11.0.2")
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
-    implementation 'com.twilio.sdk:twilio:8.33.0'
+    implementation("com.twilio.sdk:twilio:11.0.1")
     implementation 'com.sendgrid:sendgrid-java:4.9.3'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'
 
