--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-# Twilio example (SMS)
-twilio.accountSid=YOUR_TWILIO_SID
-twilio.authToken=YOUR_TWILIO_TOKEN
-twilio.fromNumber=+1XXXXXXXXXX
+# Twilio
+twilio_accountSid=
+twilio_authToken=
+twilio_fromNumber=
 
 # JWT
 jwt.secret=ReplaceWithASecretKeyAtLeast32CharsLong
